Revisao/style.css
/* ... */
#adicionar_obs span {
    font-weight: bold;
}


.table-container {
    background-color: #ffffff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

/* Ajuste a tabela */
#tabelaHistorico {
    width: 80% !important;
    border-collapse: collapse;
    margin: 30px auto;
}

#tabelaHistorico th,
#tabelaHistorico td {
    padding: 8px;
    text-align: center;
    border: 1px solid #d8d8d8;
}

#tabelaHistorico th {
    background-color: #f2f2f2;
}


.tooltip {
    position: relative;
    display: inline-block;
}

.tooltip:hover::after {
    content: attr(data-tooltip);
    position: absolute;
    top: 110%;
    left: 50%;
    transform: translateX(-50%);
    padding: 5px;
    background-color: #333;
    color: #fff;
    border-radius: 4px;
    white-space: nowrap;
    font-size: 12px;
}

.alternar {
    display: flex;
    justify-content: center;
    gap: 10px;
    margin: 20px 0;
}

.alternar button {
    padding: 8px 16px;
    border: none;
    border-radius: 5px;
    color: white;
    cursor: pointer;
    font-size: 14px;
    transition: 0.3s all ease;
}

.alternar button:nth-child(1) {
    background-color: #007bff;
    /* Azul */
}

.alternar button:nth-child(2) {
    background-color: #ffc107;
    /* Amarelo */
}

.alternar button:nth-child(3) {
    background-color: #28a745;
    /* Verde */
}

.alternar button:hover {
    opacity: 0.8;
}

.comment-marker {
    position: absolute;
    width: 15px;
    height: 15px;
    background-color: red;
    border-radius: 50%;
    cursor: pointer;
    transform: translate(-50%, -50%);
}

nav {
    margin: 0 auto;
    max-height: 60vh;
    overflow: auto;
    padding-right: 6px;
}

.image {
    height: 100%;
    width: 100%;
    transition: 0.3s;
    object-fit: cover;
}

.image:hover {
    cursor: pointer;
}

.imagens {
    display: grid;
    grid-template-columns: 60px 150px 1fr 250px;
    justify-content: center;
    margin-top: 30px;
}

#imageContainer {
    display: flex;
    justify-content: center;
    margin-top: 20px;
    flex-direction: column;
}

#imagens {
    display: flex;
    margin: auto;
    grid-column: 2;
    flex-direction: column;
    gap: 10px;
}


#imagem_completa {
    position: relative;
    max-width: 90%;
    height: max-content;
    width: auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: auto;
    grid-column: 3;
    overflow: hidden;
}

@media (min-width: 3400px) {
    #imagem_completa {
        max-width: 60%;
    }
}


.sidebar-direita {
    overflow: auto;
    max-height: 80vh;
    grid-column: 4;
    margin: 0 auto;
    flex-direction: column;
}

.sidebar-direita h3 {
    text-align: center;
}

/* Estilo para o comentário */
.comment {
    position: absolute;
    cursor: pointer;
    padding: 5px;
    background-color: black;
    color: white;
    border-radius: 5px;
    font-size: 12px;
    transition: all 0.3s ease-in-out;
    transform: translate(-50%, -50%);
}

/* 
.tooltip:hover::after {
    content: attr(data-tooltip);
    position: absolute;
    bottom: 100%;
    left: 50%;
    transform: translateX(-50%);
    padding: 5px;
    background-color: #333;
    color: #fff;
    border-radius: 4px;
    white-space: nowrap;
    font-size: 12px;
    transition: 0.3s all ease;
}
 */

.comment-number.highlight,
.comment.highlight {
    background-color: #007bff;
    color: white;
    transition: background-color 0.3s ease, color 0.3s ease;
}

.action-btn {
    padding: 5px 2rem;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s all ease;
    color: white;
}


.comentarios {
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background-color: #747474;
    border-radius: 10px;
}

::-webkit-scrollbar-track {
    background-color: #f1f1f1;
}

body::-webkit-scrollbar {
    width: 5px;
}

body::-webkit-scrollbar-thumb {
    background-color: #747474;
    border-radius: 10px;
}

body::-webkit-scrollbar-track {
    background-color: #f1f1f1;
}



.comment-card {
    background-color: #3d3d3d;
    border-radius: 8px;
    padding: 15px;
    color: white;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    position: relative;
    font-size: 0.8rem;
}

.comment-header {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-bottom: 8px;
}

.comment-number {
    background-color: #666;
    color: white;
    padding: 4px 8px;
    border-radius: 50%;
    font-weight: bold;
}

.comment-user {
    font-weight: bold;
}

.comment-body {
    margin-bottom: 8px;
}

.comment-footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.comment-date {
    font-size: 12px;
    color: #888;
}

.comment-actions button {
    background: none;
    border: none;
    cursor: pointer;
    color: white;
    margin-left: 5px;
}

.comment-actions button:hover {
    transform: scale(1.1);
}

.comment-resp {
    color: #ffffff;
}

.filtros {
    margin: auto;
    display: flex;
    justify-content: space-around;

    gap: 50px;
}

.filtros select {
    width: max-content;
    margin: 0 auto;
    border: none;
    border-bottom: 1px solid black;
}

.filtros div {
    display: flex;
    flex-direction: column;
    gap: 5px;
    text-align: center;
}

.imageWrapper {
    position: relative;
    padding: 6px;
    background-color: #5b5b5b;
    width: 100px;
    height: 100px;
    border-radius: 8px;
}

.notification-dot {
    position: absolute;
    top: 5px;
    right: 5px;
    width: 10px;
    height: 15px;
    background-color: red;
    border-radius: 50%;
    z-index: 10;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
    font-size: 10px;
    text-align: center;
    color: white;
}
/* ... */

